Add default reporter for Bazel integration
When the added Bazel configuration flag is enabled,
a default JUnit reporter will be added if the XML
envrioment variable is defined.
Fix include paths for generated config header.
Enable Bazel config by default when building with
Bazel.

--- a/src/catch2/catch_user_config.hpp.in
+++ b/src/catch2/catch_user_config.hpp.in
@@ -165,6 +165,7 @@
 // ------
 
 
+#cmakedefine CATCH_CONFIG_BAZEL_SUPPORT
 #cmakedefine CATCH_CONFIG_DISABLE_EXCEPTIONS
 #cmakedefine CATCH_CONFIG_DISABLE_EXCEPTIONS_CUSTOM_HANDLER
 #cmakedefine CATCH_CONFIG_DISABLE
