--- a/src/catch2/catch_user_config.hpp.in
+++ b/src/catch2/catch_user_config.hpp.in
@@ -32,7 +32,13 @@
 #    error Cannot force ANDROID_LOGWRITE to both ON and OFF
 #endif
 
+#cmakedefine CATCH_CONFIG_COLOUR_WIN32
+#cmakedefine CATCH_CONFIG_NO_COLOUR_WIN32
 
+#if defined( CATCH_CONFIG_COLOUR_WIN32 ) && \
+    defined( CATCH_CONFIG_NO_COLOUR_WIN32 )
+#    error Cannot force COLOUR_WIN32 to be ON and OFF
+#endif
 
 #cmakedefine CATCH_CONFIG_COUNTER
 #cmakedefine CATCH_CONFIG_NO_COUNTER
@@ -159,9 +165,6 @@
 // ------
 
 
-#cmakedefine CATCH_CONFIG_COLOUR_ANSI
-#cmakedefine CATCH_CONFIG_COLOUR_NONE
-#cmakedefine CATCH_CONFIG_COLOUR_WINDOWS
 #cmakedefine CATCH_CONFIG_DISABLE_EXCEPTIONS
 #cmakedefine CATCH_CONFIG_DISABLE_EXCEPTIONS_CUSTOM_HANDLER
 #cmakedefine CATCH_CONFIG_DISABLE
