Added new CTest test for --skip-benchmarks cmd line option The new CTest runs a dedicated TEST_CASE with the --skip-benchmarks option. The TEST_CASE can only succeed when the two benchmarks inside are skipped.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -359,6 +359,10 @@ add_test(NAME CheckConvenienceHeaders
     ${PYTHON_EXECUTABLE} ${CATCH_DIR}/tools/scripts/checkConvenienceHeaders.py
 )
 
+add_test(NAME "Benchmarking::SkipBenchmarkMacros"
+  COMMAND
+    $<TARGET_FILE:SelfTest> "Skip benchmark macros" --skip-benchmarks
+)
 
 add_test(NAME "Benchmarking::FailureReporting::OptimizedOut"
   COMMAND
