Bazel build: Update of skylib

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,4 +1,5 @@
 build:gcc9 --cxxopt=-std=c++2a
+build:gcc11 --cxxopt=-std=c++2a
 build:clang13 --cxxopt=-std=c++17
 build:vs2019 --cxxopt=/std:c++17
 build:vs2022 --cxxopt=/std:c++17
