--- a/meson.build
+++ b/meson.build
@@ -9,9 +9,9 @@ project(
   'catch2',
   'cpp',
   version : '3.1.0',
-  license: 'Boost 1.0')
-pkg = import('pkgconfig')
-cpp = meson.get_compiler('cpp')
+  license: 'BSL-1.0',
+  meson_version: '>=0.49.0'
+)
 
 subdir('src/catch2')
 subdir('tests')
