Move throwing test failure exceptions into a helper

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -176,6 +176,7 @@ set(IMPL_SOURCES
     ${SOURCES_DIR}/internal/catch_commandline.cpp
     ${SOURCES_DIR}/internal/catch_source_line_info.cpp
     ${SOURCES_DIR}/catch_config.cpp
+    ${SOURCES_DIR}/internal/catch_test_failure_exception.cpp
     ${SOURCES_DIR}/internal/catch_case_insensitive_comparisons.cpp
     ${SOURCES_DIR}/internal/catch_console_colour.cpp
     ${SOURCES_DIR}/internal/catch_context.cpp
