--- a/tests/ExtraTests/CMakeLists.txt
+++ b/tests/ExtraTests/CMakeLists.txt
@@ -269,6 +269,7 @@ set_tests_properties(
     BenchmarksInCumulativeReporter
   PROPERTIES
     PASS_REGULAR_EXPRESSION "1\n2\n3\n4\n5\n"
+    COST 30
 )
 
 
