--- a/src/catch2/meson.build
+++ b/src/catch2/meson.build
@@ -56,7 +56,6 @@ internal_headers = [
   'generators/catch_generators_random.hpp',
   'generators/catch_generators_range.hpp',
   'interfaces/catch_interfaces_all.hpp',
-  'interfaces/catch_interfaces_capture.hpp',
   'interfaces/catch_interfaces_config.hpp',
   'interfaces/catch_interfaces_exception.hpp',
   'interfaces/catch_interfaces_generatortracker.hpp',
@@ -64,6 +63,7 @@ internal_headers = [
   'interfaces/catch_interfaces_reporter_factory.hpp',
   'interfaces/catch_interfaces_testcase.hpp',
   'internal/catch_assertion_handler.hpp',
+  'internal/catch_benchmark_stats_fwd.hpp',
   'internal/catch_case_insensitive_comparisons.hpp',
   'internal/catch_case_sensitive.hpp',
   'internal/catch_clara.hpp',
@@ -165,6 +165,7 @@ internal_headers = [
   'catch_template_test_macros.hpp',
   'catch_test_case_info.hpp',
   'catch_test_macros.hpp',
+  'catch_test_run_info.hpp',
   'catch_test_spec.hpp',
   'catch_timer.hpp',
   'catch_tostring.hpp',
@@ -178,7 +179,6 @@ internal_sources = files(
   'generators/catch_generator_exception.cpp',
   'generators/catch_generators.cpp',
   'generators/catch_generators_random.cpp',
-  'interfaces/catch_interfaces_capture.cpp',
   'interfaces/catch_interfaces_config.cpp',
   'interfaces/catch_interfaces_exception.cpp',
   'interfaces/catch_interfaces_generatortracker.cpp',
